--- a/src/app/countries/components/countries-table/countries-table.component.html
+++ b/src/app/countries/components/countries-table/countries-table.component.html
@@ -26,7 +26,7 @@ class="alert alert-warning text-center"
         <th> {{country.capital}} </th>
         <th> {{country.population | number }} </th>
         <th>
-          <a href="">Ver más</a>
+          <a [routerLink]="['/countries/by/', country.cca3]" >Info</a>
         </th>
       </tr>
     </tbody>
