Agregando botones en busqueda por region, creando type Region

--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col">
     <shared-search-box
-    (onValue)="byCountry($event)"
+    (onDebounce)="byCountry($event)"
     placeholder="Buscar por país"
     ></shared-search-box>
   </div>
