--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,6 +4,7 @@
 <div class="row">
   <div class="col">
     <shared-search-box
+    [valorInitial]="termInitial"
     (onDebounce)="byCapital($event)"
     placeholder="Buscar por capital"></shared-search-box>
   </div>
