--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -4,6 +4,7 @@
   <div class="col">
     <shared-search-box
     (onDebounce)="byCountry($event)"
+    [valorInitial]="termInitial"
     placeholder="Buscar por país"
     ></shared-search-box>
   </div>
