--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -3,5 +3,6 @@
 [placeholder]="placeholder"
 type="text" class="form-control"
 (keyup)="onKeyPress(inputText.value)"
+[value]="valorInitial"
 #inputText
 >
